Fix (navigation): bug where nav hidden on mobile

--- a/src/_component.navigation.scss
+++ b/src/_component.navigation.scss
@@ -1,5 +1,1 @@
-.mdl-navigation {
-    @media screen and (max-width: 1024px) {
-        display: none;
-    }
-}
+.mdl-navigation {}
